--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,62 @@
 absl-py==2.2.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 appopener==1.3
+asgiref==3.8.1
+asttokens==3.0.0
 astunparse==1.6.3
+async-timeout==4.0.3
 attrs==25.1.0
+backoff==2.2.1
 backports.tarfile==1.2.0
+bcrypt==4.3.0
 beautifulsoup4==4.13.3
 bidict==0.23.1
 blinker==1.9.0
+build==1.2.2.post1
 cachetools==5.5.1
 certifi==2025.1.31
 cffi==1.17.1
 chardet==3.0.4
 charset-normalizer==2.1.1
+chroma-hnswlib==0.7.3
+chromadb==0.5.3
 click==8.1.8
 colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.2
 comtypes==1.4.10
+contourpy==1.3.1
+cycler==0.12.1
+dataclasses-json==0.6.7
 DateTime==5.5
+debugpy==1.8.14
 decorator==5.2.1
+Deprecated==1.2.18
 distro==1.9.0
 dnspython==2.7.0
+durationpy==0.9
 eventlet==0.39.1
 exceptiongroup==1.2.2
+executing==2.2.0
+faiss-cpu==1.11.0
+fastapi==0.115.12
 ffmpeg-python==0.2.0
 filelock==3.18.0
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-SocketIO==5.5.1
 flatbuffers==25.2.10
+fonttools==4.56.0
+frozenlist==1.6.0
 fsspec==2025.3.0
 future==1.0.0
 gast==0.4.0
+gdown==5.2.0
 geocoder==1.38.1
 git-filter-repo==2.47.0
 gitdb==4.0.12
@@ -39,58 +64,112 @@ GitPython==3.1.44
 google-auth==2.38.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+googleapis-common-protos==1.70.0
 greenlet==3.1.1
-grpcio==1.48.1
+groq==0.24.0
+grpcio==1.71.0
 grpcio-tools==1.48.1
 h11==0.14.0
 h5py==3.13.0
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.1
-huggingface-hub==0.29.3
+httpx-sse==0.4.0
+huggingface-hub==0.31.1
+humanfriendly==10.0
 idna==2.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+intel-openmp==2021.4.0
+ipykernel==6.29.5
+ipython==8.36.0
 itsdangerous==2.2.0
 jaraco.context==6.0.1
+jedi==0.19.2
 Jinja2==3.1.5
 jiter==0.9.0
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 keras==2.10.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.8
+kubernetes==32.0.1
+langchain==0.3.25
+langchain-community==0.3.23
+langchain-core==0.3.59
+langchain-groq==0.3.2
+langchain-huggingface==0.2.0
+langchain-text-splitters==0.3.8
+langsmith==0.3.42
 libclang==18.1.1
 llvmlite==0.44.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mkl==2021.4.0
+mmh3==5.1.0
+monotonic==1.6
 more-itertools==10.6.0
 MouseInfo==0.1.3
 mpmath==1.3.0
+multidict==6.4.3
+mypy_extensions==1.1.0
 narwhals==1.26.0
+nest-asyncio==1.6.0
 networkx==3.4.2
 newsapi-python==0.2.6
 nltk==3.9.1
 npm==0.1.1
 numba==0.61.0
-numpy==1.23.5
+numpy==1.24.4
 oauthlib==3.2.2
+onnxruntime==1.21.0
 openai==1.68.2
 openai-whisper==20240930
 opencv-python==4.11.0.86
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp-proto-common==1.32.1
+opentelemetry-exporter-otlp-proto-grpc==1.32.1
+opentelemetry-instrumentation==0.53b1
+opentelemetry-instrumentation-asgi==0.53b1
+opentelemetry-instrumentation-fastapi==0.53b1
+opentelemetry-proto==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+opentelemetry-util-http==0.53b1
 opt_einsum==3.4.0
 optional-django==0.1.0
+orjson==3.10.16
+overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 Pillow==9.2.0
-protobuf==3.19.5
+platformdirs==4.3.8
+posthog==3.25.0
+prompt_toolkit==3.0.51
+propcache==0.3.1
+protobuf==5.29.4
 psutil==5.9.3
+pure_eval==0.2.3
 pyarrow==19.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 PyAudio==0.2.12
 PyAutoGUI==0.9.54
+pycaw==20240210
 pycparser==2.22
 pydantic==2.10.6
+pydantic-settings==2.9.1
 pydantic_core==2.27.2
 pydeck==0.9.1
 pygame==2.6.1
@@ -100,10 +179,15 @@ pyjokes==0.6.0
 pymongo==4.11.3
 PyMsgBox==1.0.9
 pynput==1.7.6
+pyparsing==3.2.3
 pyperclip==1.9.0
+PyPika==0.48.9
 pypiwin32==223
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
 PyRect==0.2.0
 PyScreeze==1.0.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==0.21.0
 python-engineio==4.11.2
@@ -114,19 +198,24 @@ pytz==2025.1
 pywhatkit==5.4
 pywin32==310
 PyYAML==6.0.2
+pyzmq==26.4.0
 ratelim==0.1.6
 referencing==0.36.2
 regex==2024.11.6
-requests==2.28.1
+requests==2.32.3
 requests-oauthlib==2.0.0
-rich==13.9.4
+requests-toolbelt==1.0.0
+rich==13.7.1
 rpds-py==0.22.3
 rsa==4.9
 safetensors==0.5.3
 scikit-learn==1.6.1
 scikit-surprise==1.1.4
 scipy==1.15.2
+screen_brightness_control==0.24.2
 selenium==3.141.0
+sentence-transformers==4.1.0
+shellingham==1.5.4
 simple-websocket==1.1.0
 six==1.17.0
 smmap==5.0.2
@@ -135,11 +224,15 @@ sounddevice==0.5.1
 soupsieve==2.6
 SpeechRecognition==3.8.1
 speedtest-cli==2.1.3
+SQLAlchemy==2.0.40
 srt==3.5.3
 stability-sdk==0.3.0
+stack-data==0.6.3
+starlette==0.46.2
 streamlit==1.42.0
 surprise==0.1
 sympy==1.13.1
+tbb==2021.13.1
 tenacity==9.0.0
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
@@ -150,17 +243,26 @@ tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.5.0
 threadpoolctl==3.5.0
 tiktoken==0.9.0
-tokenizers==0.21.1
+tokenizers==0.19.1
 toml==0.10.2
-torch==2.6.0
+tomli==2.2.1
+torch==2.3.1
 tornado==6.4.2
-tqdm==4.67.1
-transformers==4.50.0
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.41.2
+typer==0.15.2
+typing-inspect==0.9.0
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==1.25.11
+uvicorn==0.34.1
 vosk==0.3.45
 watchdog==6.0.0
+watchfiles==1.0.5
+wcwidth==0.2.13
+websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wikipedia==1.4.0
@@ -169,5 +271,8 @@ wolframalpha==5.0.0
 wrapt==1.17.2
 wsproto==1.2.0
 xmltodict==0.14.2
+yarl==1.20.0
 youtube-search-python==1.6.6
+zipp==3.21.0
 zope.interface==7.2
+zstandard==0.23.0
